--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
             content="Hi!, REEDNIV is a great development, I love everything about Technology, let's be friend and talk about it!">
 
-        <meta property="og:url" content="http://onenrico.me">
+        <meta property="og:url" content="#">
 
         <meta property="og:title" content="REEDNIV">
 
@@ -66,7 +66,7 @@
 
                     <div class="foto">
 
-                        <img src="assets/img/profile.jpg" alt="Enrico Fajar Ferdiansyah">
+                        <img src="assets/img/profile.jpg" alt="#">
 
                     </div>
 
