--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
                     <div class="foto">
 
-                        <img src="assets/img/profile.jpg" alt="REEDNI">
+                        <img src="assets/img/favicon.png" alt="REEDNI">
 
                     </div>
 
