--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
                     <div class="foto">
 
-                        <img src="assets/img/favicon.png" alt="REEDNI">
+                        <img class="favicons" src="assets/img/favicon.png" alt="REEDNIV">
 
                     </div>
 
@@ -84,7 +84,7 @@
 
                     <ul>
 
-                        <li><a target="_blank" class="icons hover-animate" href="https://www.facebook.com/redniv"><i
+                        <li><a target="_blank" class="icons hover-animate" href="https://www.facebook.com/reedniv"><i
 
                                     class="fa fa-facebook"></i></a></li>
 
