--- a/index.html
+++ b/index.html
@@ -1,114 +1,50 @@
 <!DOCTYPE html>
 
 <html lang="en">
-
     <head>
-
-        <meta charset="utf-8">
-
-        <title>Welcome | REEDNIV</title>
-
+        <meta content='text/html; charset=UTF-8' http-equiv='Content-Type'/>
+        <meta content='IE=9; IE=8; IE=7; IE=EDGE; chrome=1' http-equiv='X-UA-Compatible'/>
+        <meta expr:content='data:blog.isMobile or data:blog.isMobileRequest ? &quot;width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0&quot; : &quot;width=1100&quot;' name='viewport'/>
+        <title>REEDNIV | Developer</title>
+        <meta content='REEDNIV' name='Author'/>
         <link rel="shortcut icon" href="http://reedniv.blogspot.com/favicon.ico" type="image/x-icon">
-
         <meta name="author" content="REEDNIV">
-
-        <meta name="keywords"
-
-            content="REEDNIV, Web DEVELOPER, Content Creator, Web Design, Android Developer, Android">
-
-        <meta name="description"
-
-            content="Hi!, REEDNIV is a great development, I love everything about Technology, let's be friend and talk about it!">
-
+        <meta name="keywords" content="REEDNIV, Web DEVELOPER, Content Creator, Web Design, Android Developer, Android">
+        <meta name="description" content="Hi!, REEDNIV is a great development, I love everything about Technology, let's be friend and talk about it!">
         <meta property="og:url" content="#">
-
         <meta property="og:title" content="REEDNIV">
-
-        <meta property="og:description"
-
-            content="Hi!, REEDNIV is a great development, I love everything about Technology, let's be friend and talk about it!">
-
+        <meta property="og:description" content="Hi!, REEDNIV is a great development, I love everything about Technology, let's be friend and talk about it!">
         <meta property="og:image" content="http://reedniv.blogspot.com/assets/img/profile.jpg">
-
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-
-        <link type="text/css" media="all"
-
-            href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-
-        <link type="text/css" media="all" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css"
-
-            rel="stylesheet">
-
+        <link type="text/css" media="all" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+        <link type="text/css" media="all" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
         <link type="text/css" media="all" href="assets/css/main.css" rel="stylesheet">
-
         <meta name="theme-color" content="#ffffff">
-
-        <link
-
-            href="https://fonts.googleapis.com/css?family=Raleway:400,100,100italic,200,200italic,300,300italic,400italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic"
-
-            rel="stylesheet" type="text/css">
-
+        <link href="https://fonts.googleapis.com/css?family=Raleway:400,100,100italic,200,200italic,300,300italic,400italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic" rel="stylesheet" type="text/css">
         <script data-ad-client="ca-pub-" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-
     </head>
-
-    </head>
-
     <body>
-
         <div class="home text-center">
-
             <div class="row">
-
                 <div class="col-6 col-sm-12 text-center">
-
                     <div class="foto">
-
                         <img class="favicons" src="assets/img/favicon.png" alt="REEDNIV">
-
                     </div>
-
                 </div>
-
             </div>
-
             <div class="row">
-
                 <div class="col-6 col-sm-12 text-center">
-
                     <h1 class="h1 title">REEDNIV</h1>
-
                     <h3 class="h3 sub">Fullstack Developer</h3>
-
                     <ul>
-
-                        <li><a target="_blank" class="icons hover-animate" href="https://www.facebook.com/reedniv"><i
-
-                                    class="fa fa-facebook"></i></a></li>
-
-                        <li><a target="_blank" class="icons hover-animate" href="https://www.instagram.com/reedniv"><i
-
-                                    class="fa fa-instagram"></i></a></li>
-
-                        <li><a target="_blank" class="icons hover-animate" href="https://github.com/reedniv"><i
-
-                                    class="fa fa-github"></i></a></li>
-
-                        <li><a target="_blank" class="icons hover-animate" href="/"><i
-
-                                    class="fa fa-cogs"></i></a></li>
-
+                        <li><a target="_blank" class="icons hover-animate" href="https://www.facebook.com/reedniv"><i class="fa fa-facebook"></i></a></li>
+                        <li><a target="_blank" class="icons hover-animate" href="https://www.instagram.com/reedniv"><i class="fa fa-instagram"></i></a></li>
+                        <li><a target="_blank" class="icons hover-animate" href="https://github.com/reedniv"><i class="fa fa-github"></i></a></li>
+                        <li><a target="_blank" class="icons hover-animate" href="/"><i class="fa fa-cogs"></i></a></li>
                     </ul>
-
                 </div>
-
             </div>
-
         </div>
-
     </body>
-
 </html> 
 
